provision/ansible/files/manifestos/homolog/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: web
  name: web
  namespace: homolog
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
        - image: 192.168.88.20:8082/course_catalog:0.27
          name: simplepythonflask
          lifecycle:
            postStart:
              exec:
                command: ["python3", "create_db.py"]
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
